--- a/statics/styles/styles.css
+++ b/statics/styles/styles.css
@@ -518,17 +518,17 @@ img {
     width: 75%;
 }
 
-/* .skills_p{
+.skills_p{
     width:60%;
-} */
+} 
 
 .skills_ds{
     width:70%;
 }
 
-/* .skills_cpp {
-    width: 100%;
-} */
+.skills_cpp {
+    width: 70%;
+} 
 
 /* .skills_java {
     width: 95%;
